# calibration-service

./: .dockerignore  .env  .env.test  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  cspell.config.yaml  docker-compose.yaml  fly.toml  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini  run.sh  run_tests.sh  search.html
.github/: WORKFLOWS.md
.github/workflows/: ci.yaml  deploy_release.yaml  pyright.yaml  pytest.yaml  ruff.yaml
.run/: FastAPI - local.run.xml
ARCHITECTURE/: index.html
CONTRIBUTING/: index.html
DATABASE/: index.html
DEVELOPER/: index.html
HOME/: index.html
PROJECT/: index.html
TESTS/: index.html
WORKFLOWS/: index.html
alembic/: env.py
alembic/versions/: 57caef39c258_define_initial_tables.py
app/: dependencies.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEVELOPER.md  PROJECT.md  TESTS.md  WORKFLOWS.md  index.md
scripts/: bash_runner.py  make_tree.py  run_db.sh  run_tests.sh  run_tests_with_coverage.sh  seed_database.py
scripts/sample_data/: sample_calibrations.json
search/: search_index.json
src/: main.py
src/application/dtos/: get_calibrations_by_tag_dtos.py  get_tags_for_calibration_dtos.py
src/application/repositories/: calibration_repository.py  tag_repository.py
src/application/use_cases/: exceptions.py
src/application/use_cases/calibrations/: add_calibration_tags.py  add_calibration_use_case.py  get_tags_for_calibration.py  list_calibrations.py
src/application/use_cases/tags/: add_bulk_tags_to_calibration.py  add_tag_to_calibration.py  create_tag.py  get_calibrations_by_tag.py  list_tags.py  remove_tag_from_calibration.py
src/config/: alembic.py  database.py  logger.py
src/config/sqlalchemy/: ulid_type.py
src/drivers/rest/: dependencies.py  exception_handlers.py  main.py
src/drivers/rest/routers/: __init__.py  calibration_router.py  health_router.py  tag_router.py
src/drivers/rest/schemas/: calibration_schemas.py  tag_schemas.py
src/entities/: exceptions.py
src/entities/models/: calibration.py  calibration_tag.py  calibration_tag_association.py  tag.py
src/entities/value_objects/: calibration_type.py  iso_8601_timestamp.py
src/infrastructure/orm_models/: __init__.py  base.py  calibration.py  tag.py
src/infrastructure/repositories/calibration_repository/: in_memory_repository.py  mongodb_repository.py  postgres_repository.py
src/infrastructure/repositories/tag_repository/: mock_repository.py  postgres_repository.py
src/interface_adapters/controllers/calibrations/: add_calibration_controller.py  get_tags_for_calibration_controller.py  list_calibrations_controller.py
src/interface_adapters/controllers/tags/: add_bulk_tags_to_calibration_controller.py  add_tag_to_calibration_controller.py  create_tag_controller.py  get_calibrations_by_tag_controller.py  list_tags_controller.py  remove_tag_from_calibration_controller.py
src/interface_adapters/presenters/: calibration_presenter.py  tag_presenter.py
tests/: conftest.py
tests/e2e/: test_tag_archiving_e2e.py
tests/integration/drivers/: conftest.py
tests/integration/drivers/rest/: test_api_use_cases.py  test_calibration_add.py  test_calibration_add_tags.py  test_calibration_api.py  test_tagging_api.py
tests/integration/drivers/rest/routers/: test_calibration_router.py
tests/integration/repositories/: test_mongodb_calibration_repository.py
tests/unit/application/use_cases/: conftest.py
tests/unit/application/use_cases/calibrations/: add_calibration_tags_use_case_test.py  add_calibration_use_case_test.py  test_get_tags_for_calibration.py  test_list_calibrations.py
tests/unit/application/use_cases/tags/: conftest.py  test_add_bulk_tags_to_calibration.py  test_add_tag_to_calibration.py  test_create_tag.py  test_get_calibrations_by_tag.py  test_list_tags.py  test_remove_tag_from_calibration.py
tests/unit/infrastructure/repositories/: test_calibration_repository.py
tests/unit/interface_adapters/controllers/calibrations/: test_add_calibration_controller.py  test_get_tags_for_calibration_controller.py  test_list_calibrations_controller.py
tests/unit/interface_adapters/controllers/tags/: conftest.py  test_add_bulk_tags_to_calibration_controller.py  test_add_tag_to_calibration_controller.py  test_create_tag_controller.py  test_get_calibrations_by_tag_controller.py  test_list_tags_controller.py  test_remove_tag_from_calibration_controller.py
tests/utils/: __init__.py  entity_factories.py
